@@ -57,6 +57,7 @@ STR_DOM_MISSIONSTRING_VIEWDISTANCE_SERVER_INIT_CLIENT
 STR_DOM_MISSIONSTRING_2097
 STR_DOM_MISSIONSTRING_2098
 STR_DOM_MISSIONSTRING_ENEMY_FACTIONS
+STR_DOM_MISSIONSTRING_GUERRILLA_FACTIONS
 STR_DOM_MISSIONSTRING_FACTION_TALIBAN
 STR_DOM_MISSIONSTRING_FACTION_ASIAN_INSURGENTS
 STR_DOM_MISSIONSTRING_FACTION_CENTRAL_AFRICAN_REBELS
@@ -67,6 +68,11 @@ STR_DOM_MISSIONSTRING_FACTION_RUSSIAN_ARMED_FORCES_WINTER
 STR_DOM_MISSIONSTRING_FACTION_AFRICAN_DESERT_CIVILIAN_MILITIA
 STR_DOM_MISSIONSTRING_FACTION_ION_URBAN
 STR_DOM_MISSIONSTRING_FACTION_KARZEGHISTAN_ROYAL_GUARD
+STR_DOM_MISSIONSTRING_FACTION_INDFOR_AAF
+STR_DOM_MISSIONSTRING_FACTION_INDFOR_AFGHANISTAN_ARMY
+STR_DOM_MISSIONSTRING_FACTION_INDFOR_SUDAN_PDF
+STR_DOM_MISSIONSTRING_FACTION_INDFOR_SUDAN_REV_FRONT
+STR_DOM_MISSIONSTRING_FACTION_INDFOR_CUP_EASTASIA
 STR_DOM_MISSIONSTRING_ENABLE_WOMEN_MILITARY
 STR_DOM_MISSIONSTRING_COMBAT_UAV_TEAM_MAX_REACHED
 STR_DOM_MISSIONSTRING_COMBAT_UAV_PLAYER_MAX_REACHED
